fixed nav alignment

--- a/Client/src/app/core/layout/header/header.scss
+++ b/Client/src/app/core/layout/header/header.scss
@@ -3,7 +3,8 @@
 }
 
 nav > * {
-  padding-block: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-top: 0.5rem;
   padding-inline: 0.25rem;
   border-bottom: 3px solid transparent;  // reserve space
 }
